<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item android:id="@+id/menuItemHome"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="主頁" />
        <item android:id="@+id/menuItemInfo"
            android:icon="@drawable/ic_person_pin_black_24dp"
            android:title="@string/menuItemInfo" />
        <item android:id="@+id/menuItemServiceMng"
            android:icon="@drawable/ic_format_list_bulleted_black_24dp"
            android:title="@string/menuItemServiceMng" />
        <item android:id="@+id/menuItemStatistics"
            android:icon="@drawable/ic_pie_chart_black_24dp"
            android:title="@string/mdrin_statistics" />
    </group>
    <item android:title="相關資訊">
        <menu>
            <item android:id="@+id/menuItemAbout"
                android:title="@string/menuItemAbout" />
        </menu>

    </item>



</menu>
