<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/menuItemHome">

    <fragment
        android:id="@+id/menuItemHome"
        android:name="com.example.myrehabilitaion.FragmentHomePage.HomeFragment"
        android:label="@string/mdrin_home"
        tools:layout="@layout/fragment_home"/>
    <fragment
        android:id="@+id/menuItemInfo"
        android:name="com.example.myrehabilitaion.FragmentHomePage.PsInfoFragment"
        android:label="@string/mdrin_psnlinfo"
        tools:layout="@layout/fragment_psinformationpage" />
    <fragment
        android:id="@+id/menuItemServiceMng"
        android:name="com.example.myrehabilitaion.FragmentHomePage.ServiceMng"
        android:label="@string/mdrin_srvc" />
    <fragment
        android:id="@+id/menuItemAbout"
        android:name="com.example.myrehabilitaion.FragmentHomePage.AboutUs"
        android:label="@string/mdrin_aboutus"
        tools:layout="@layout/fragment_about_us"/>
    <fragment
        android:id="@+id/menuItemStatistics"
        android:name="com.example.myrehabilitaion.FragmentHomePage.Statistics"
        android:label="統計頁面"
        tools:layout="@layout/fragment_statistics" />

</navigation>